--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
+  <h1 id="title">Monty's Drum 🥁 Kit</h1>
   <h2 id="words">Click on the instrument to play it or press the corresponding letter on your keyboard</h2>
   <div class="set">
     <button class="w drum">w</button>
